# hsafa-logic

./: .gitignore  COMPREHENSIVE_TEST_REPORT.md  ENHANCEMENT_PLAN.md  HACKATHON.md  INTEGRATION_GUIDE.md  README.md  REFACTOR_PLAN.md  REFACTOR_TASKS.md  V3_STATUS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: page.tsx  simple-agent.ts
hsafa-cases/: index.html  package.json  vite.config.ts
hsafa-core/: EXTENSION_ARCHITECTURE.md  TEST_RESULTS.md  TEST_SERVICE_PLAN.md  V4_IMPLEMENTATION_PLAN.md  V5_PLAN.md  docker-compose.prod.yml  philosophy.md
hsafa-core/sdks/extension-python/: README.md  pyproject.toml
hsafa-core/sdks/extension-python/hsafa_extension/: __init__.py  client.py  extension.py  types.py
hsafa-docs-v2/: 00-core-philosophy.md  01-trigger-system.md  02-spaces-and-context.md  03-tool-system.md  04-messaging-and-waiting.md  05-context-model.md  06-run-awareness.md  07-human-like-behavior.md  09-data-model.md  10-implementation-blueprint.md  11-examples-and-scenarios.md  12-streaming-and-redis.md  13-context-continuity.md  14-prebuilt-tools-reference.md  15-idea-stateless-runs.md  20-living-agent-architecture.md  README.md  implementation-roadmap.md
hsafa-docs-v3/: 00-core-philosophy.md  02-inbox-and-triggers.md  04-think-cycle.md  05-spaces-and-context.md  06-tool-system.md  07-messaging.md  10-data-model.md  11-examples-and-scenarios.md  12-human-like-behavior.md  README.md  (+2 more)
python-sdk/: pyproject.toml
python-sdk/examples/: tool_worker.py
python-sdk/hsafa/: auth.py  http.py
python-sdk/hsafa/resources/: messages.py
(+1048 files in other folders)
