[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hsafa"
version = "0.1.0"
description = "Python SDK for Hsafa — admin operations, services, robots, and backends"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hsafa*"]
