[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hsafa-extension"
version = "0.1.0"
description = "Python SDK for building Hsafa extensions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["hsafa_extension"]
